# sprue

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml  verify.yml
.kiro/steering/: contributor.md
docs/: development-process.md  sprue-implementation.md
docs/decisions/: 0001-origin-and-scaling-vision.md  0002-content-safety-invariants.md  0003-three-command-pipeline.md  0004-faceted-classification-system.md  0005-content-type-system.md  0006-configuration-layering.md  0007-platform-instance-architecture.md  0008-emergent-directory-structure.md  0009-verification-pipeline.md  0010-slug-based-addressing.md  0011-entity-ontology.md  0012-agent-memory.md  0013-tooling-and-ci-pipeline.md  0014-emergent-data-structures.md  0015-content-quality-model.md  0016-navigation-architecture.md  0017-operational-logging.md  0018-three-automation-modes.md  0019-llm-retrieval-optimization.md  0020-mermaid-diagram-standard.md  0021-configurable-enhance-agents.md  0022-agent-bootstrap.md  0023-reset-command.md  0024-inbox-drop-zone.md  0025-schema-versioning.md  0026-spec-driven-development-process.md  0027-sources-field-in-frontmatter.md  0028-provenance-enforcement-model.md  0029-plans-layer.md  0030-rename-platform-to-sprue-split-docs.md  0031-product-name-sprue.md  0032-fresh-repo-no-history.md  0035-adr-lite-format.md  (+15 more)
sprue/: reset.sh
tests/: conftest.py  test_fix_image_paths.py  test_init.py  test_lib.py  test_package_contents.py  test_schema_compat.py  test_sources.py  test_upgrade.py
(+147 files in other folders)
